--- a/dashboard.html
+++ b/dashboard.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>green shadow frontend</title>
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/dashboard.css">
 </head>
@@ -16,7 +18,7 @@
             <li>
                 <a href="#">
                         <span class="icon">
-                            <ion-icon name="logo-apple"></ion-icon>
+                            <i class="fas fa-leaf" style="color: #ff0000;"></i>
                         </span>
                     <span class="title">Green Shadow</span>
                 </a>
@@ -25,7 +27,7 @@
             <li>
                 <a href="#">
                         <span class="icon">
-                            <ion-icon name="home-outline"></ion-icon>
+                            <i class="fas fa-tachometer-alt"></i>
                         </span>
                     <span class="title">Dashboard</span>
                 </a>
@@ -34,7 +36,7 @@
             <li>
                 <a href="#">
                         <span class="icon">
-                            <ion-icon name="people-outline"></ion-icon>
+                            <i class="fas fa-seedling"></i>
                         </span>
                     <span class="title">Crops</span>
                 </a>
@@ -43,7 +45,7 @@
             <li>
                 <a href="#">
                         <span class="icon">
-                            <ion-icon name="chatbubble-outline"></ion-icon>
+                            <i class="fas fa-tractor"></i>
                         </span>
                     <span class="title">Fields</span>
                 </a>
@@ -52,7 +54,7 @@
             <li>
                 <a href="#">
                         <span class="icon">
-                            <ion-icon name="help-outline"></ion-icon>
+                           <i class="fas fa-clipboard-list"></i>
                         </span>
                     <span class="title">Logs</span>
                 </a>
@@ -61,7 +63,7 @@
             <li>
                 <a href="#">
                         <span class="icon">
-                            <ion-icon name="settings-outline"></ion-icon>
+                           <i class="fas fa-tools"></i>
                         </span>
                     <span class="title">Equipment</span>
                 </a>
@@ -70,7 +72,7 @@
             <li>
                 <a href="#">
                         <span class="icon">
-                            <ion-icon name="lock-closed-outline"></ion-icon>
+                            <i class="fas fa-user-tie"></i>
                         </span>
                     <span class="title">Staff</span>
                 </a>
@@ -79,22 +81,256 @@
             <li>
                 <a href="#">
                         <span class="icon">
-                            <ion-icon name="log-out-outline"></ion-icon>
+                            <i class="fa-solid fa-car"></i>
                         </span>
-                    <span class="title">Vehicle</span>
+                    <span class="title">Vehicles</span>
                 </a>
             </li>
 
             <li>
                 <a href="#">
                         <span class="icon">
-                            <ion-icon name="log-out-outline"></ion-icon>
+                            <i class="fas fa-users"></i>
                         </span>
-                    <span class="title">User</span>
+                    <span class="title">Users</span>
                 </a>
             </li>
         </ul>
     </div>
+
+    <!-- ========================= Main ==================== -->
+    <div class="main">
+        <div class="topbar">
+            <div class="toggle">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+
+            <div class="search">
+                <label>
+                    <input type="text" placeholder="Search here">
+                    <ion-icon name="search-outline"></ion-icon>
+                </label>
+            </div>
+
+            <div class="icon">
+               <span style="font-size: 2rem">
+                   <i class="fas fa-sign-out-alt"></i>
+               </span>
+                <span style="position: relative ;bottom:0.5rem">Logout</span>
+            </div>
+        </div>
+
+        <!-- ======================= Cards ================== -->
+        <div class="cardBox">
+            <div class="card">
+                <div>
+                    <div class="numbers">50</div>
+                    <div class="cardName">Daily Views</div>
+                </div>
+
+                <div class="iconBx">
+                    <ion-icon name="eye-outline"></ion-icon>
+                </div>
+            </div>
+
+            <div class="card">
+                <div>
+                    <div class="numbers">80</div>
+                    <div class="cardName">Sales</div>
+                </div>
+
+                <div class="iconBx">
+                    <ion-icon name="cart-outline"></ion-icon>
+                </div>
+            </div>
+
+            <div class="card">
+                <div>
+                    <div class="numbers">2  </div>
+                    <div class="cardName">Total Vehicles</div>
+                </div>
+
+                <div class="iconBx">
+                    <ion-icon name="chatbubbles-outline"></ion-icon>
+                </div>
+            </div>
+
+            <div class="card">
+                <div>
+                    <div class="numbers">20</div>
+                    <div class="cardName">Total Crops</div>
+                </div>
+
+                <div class="iconBx">
+                    <ion-icon name="cash-outline"></ion-icon>
+                </div>
+            </div>
+        </div>
+
+       <!-- &lt;!&ndash; ================ Order Details List ================= &ndash;&gt;
+        <div class="details">
+            <div class="recentOrders">
+                <div class="cardHeader">
+                    <h2>Recent Orders</h2>
+                    <a href="#" class="btn">View All</a>
+                </div>
+
+                <table>
+                    <thead>
+                    <tr>
+                        <td>Name</td>
+                        <td>Price</td>
+                        <td>Payment</td>
+                        <td>Status</td>
+                    </tr>
+                    </thead>
+
+                    <tbody>
+                    <tr>
+                        <td>Star Refrigerator</td>
+                        <td>$1200</td>
+                        <td>Paid</td>
+                        <td><span class="status delivered">Delivered</span></td>
+                    </tr>
+
+                    <tr>
+                        <td>Dell Laptop</td>
+                        <td>$110</td>
+                        <td>Due</td>
+                        <td><span class="status pending">Pending</span></td>
+                    </tr>
+
+                    <tr>
+                        <td>Apple Watch</td>
+                        <td>$1200</td>
+                        <td>Paid</td>
+                        <td><span class="status return">Return</span></td>
+                    </tr>
+
+                    <tr>
+                        <td>Addidas Shoes</td>
+                        <td>$620</td>
+                        <td>Due</td>
+                        <td><span class="status inProgress">In Progress</span></td>
+                    </tr>
+
+                    <tr>
+                        <td>Star Refrigerator</td>
+                        <td>$1200</td>
+                        <td>Paid</td>
+                        <td><span class="status delivered">Delivered</span></td>
+                    </tr>
+
+                    <tr>
+                        <td>Dell Laptop</td>
+                        <td>$110</td>
+                        <td>Due</td>
+                        <td><span class="status pending">Pending</span></td>
+                    </tr>
+
+                    <tr>
+                        <td>Apple Watch</td>
+                        <td>$1200</td>
+                        <td>Paid</td>
+                        <td><span class="status return">Return</span></td>
+                    </tr>
+
+                    <tr>
+                        <td>Addidas Shoes</td>
+                        <td>$620</td>
+                        <td>Due</td>
+                        <td><span class="status inProgress">In Progress</span></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            &lt;!&ndash; ================= New Customers ================ &ndash;&gt;
+            <div class="recentCustomers">
+                <div class="cardHeader">
+                    <h2>Recent Customers</h2>
+                </div>
+
+                <table>
+                    <tr>
+                        <td width="60px">
+                            <div class="imgBx"><img src="assets/imgs/customer02.jpg" alt=""></div>
+                        </td>
+                        <td>
+                            <h4>David <br> <span>Italy</span></h4>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td width="60px">
+                            <div class="imgBx"><img src="assets/imgs/customer01.jpg" alt=""></div>
+                        </td>
+                        <td>
+                            <h4>Amit <br> <span>India</span></h4>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td width="60px">
+                            <div class="imgBx"><img src="assets/imgs/customer02.jpg" alt=""></div>
+                        </td>
+                        <td>
+                            <h4>David <br> <span>Italy</span></h4>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td width="60px">
+                            <div class="imgBx"><img src="assets/imgs/customer01.jpg" alt=""></div>
+                        </td>
+                        <td>
+                            <h4>Amit <br> <span>India</span></h4>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td width="60px">
+                            <div class="imgBx"><img src="assets/imgs/customer02.jpg" alt=""></div>
+                        </td>
+                        <td>
+                            <h4>David <br> <span>Italy</span></h4>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td width="60px">
+                            <div class="imgBx"><img src="assets/imgs/customer01.jpg" alt=""></div>
+                        </td>
+                        <td>
+                            <h4>Amit <br> <span>India</span></h4>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td width="60px">
+                            <div class="imgBx"><img src="assets/imgs/customer01.jpg" alt=""></div>
+                        </td>
+                        <td>
+                            <h4>David <br> <span>Italy</span></h4>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td width="60px">
+                            <div class="imgBx"><img src="assets/imgs/customer02.jpg" alt=""></div>
+                        </td>
+                        <td>
+                            <h4>Amit <br> <span>India</span></h4>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>-->
+    </div>
 </div>
+
+<script src="assets/js/main.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
