done staff section

--- a/dashboard.html
+++ b/dashboard.html
@@ -167,8 +167,8 @@
             </div>
         </div>
 
-       <!-- &lt;!&ndash; ================ Order Details List ================= &ndash;&gt;
-        <div class="details">
+        <!-- ================ Order Details List ================= -->
+<!--        <div class="details">
             <div class="recentOrders">
                 <div class="cardHeader">
                     <h2>Recent Orders</h2>
@@ -243,9 +243,9 @@
                     </tr>
                     </tbody>
                 </table>
-            </div>
+            </div>-->
 
-            &lt;!&ndash; ================= New Customers ================ &ndash;&gt;
+            <!--&lt;!&ndash; ================= New Customers ================ &ndash;&gt;
             <div class="recentCustomers">
                 <div class="cardHeader">
                     <h2>Recent Customers</h2>
@@ -322,10 +322,10 @@
                         <td>
                             <h4>Amit <br> <span>India</span></h4>
                         </td>
-                    </tr>
+                    </tr>-->
                 </table>
             </div>
-        </div>-->
+        </div>
     </div>
 </div>
 
